log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:39:39 PM UTC: 
 tests:  0|6
total_score: 0/70
d05428e
Thu 30 Mar 2023 03:46:51 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2a6fb8e
Thu 30 Mar 2023 03:48:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a05b0ff
Thu 30 Mar 2023 03:49:57 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:49: error: expected expression before ‘)’ token
   17 |   lista->data=malloc(sizeof(lista->size * (void)));
      |                                                 ^
Compilation failed
4092853
Thu 30 Mar 2023 03:51:41 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3e4972c
Thu 30 Mar 2023 04:01:46 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
07c194b
Thu 30 Mar 2023 04:29:15 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:17:26: error: ‘*lista.capacity’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->capacity=2*lista->capacity;
      |                     ~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f7ef02d
